--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,13 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
-
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.18.0' // NEW
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.4.10.2' // NEW
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
